# domiMarket

./: .replit  Pasted-Alright-Fred-I-clicked-around-your-Replit-app-and-here-s-the-blunt-useful-teardown-you-asked-for--1754618500982_1754618500983.txt  Pasted-Alright-Fred-here-s-a-single-copy-paste-able-setup-that-turns-your-Replit-into-a-scrappy-MVP-tha-1754619906915_1754619906920.txt  Pasted-Awesome-Here-s-an-agent-ready-prompt-to-add-a-small-safe-Admin-Jobs-Dashboard-so-you-can-b-1754603636810_1754603636811.txt  Pasted-Beautiful-Here-are-the-next-two-agent-ready-prompts-Paste-them-into-the-Replit-Agent-one-at--1754603510456_1754603510457.txt  Pasted-Build-me-a-small-full-stack-app-that-does-this-end-to-end-Title-Category-Aware-Viral-Trend-Harves-1754622104647_1754622104650.txt  Pasted-Heck-yes-Here-are-your-next-agent-ready-prompts-Paste-them-into-the-Replit-Agent-one-at-a-time-1754603421113_1754603421114.txt  Pasted-Nice-Here-s-a-tight-agent-ready-prompt-to-add-a-simple-invite-only-auth-gate-so-only-you-and-1754603576535_1754603576535.txt  app.py  auth.py  auth_broken.py  campaign_results.db  dashboard.py  gitignore  main.py  main_app.py  models.py  models_ext.py  pyproject.toml  replit.md  social_scheduler.py  stripe_payment_system.py  trend_api_endpoints.py  trend_discovery.py  trend_harvester.db  trend_harvester.py  trend_integration.py  trends_api.py  trends_collector.py  user_campaign_generator.py  veo_client.py  veo_request.py  viral_tools_researcher.py  web_scraper.py
1897eed1-8dec-4df9-97ad-d577aabc3d4d/: campaign.json  script.json  summary.json  (+1 more)
(+24 files in other folders)
